[package]
name = "muzq"
description = "Simple TUI music player"
version = "0.1.0"
edition = "2018"
authors = ["Roland Kovacs <zen3ger@tutanota.com>"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rand = "0.7"
rodio = "0.11"
termion = "1.5"
tui = "0.10"
ron = "0.6"
serde = "1.0"
serde_derive = "1.0"
